--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "he2plus"
-version = "0.2.0"
+version = "0.3.0"
 authors = [
-    {name = "Prakhar Tripathi", email = "prakhar@he2plus.dev"},
+    {name = "Prakhar Tripathi", email = "dptmywork@gmail.com"},
 ]
 description = "A powerful Python library for developer productivity and automation - built by a dev frustrated by dependency issues"
 readme = "README.md"
@@ -32,13 +32,15 @@ classifiers = [
 ]
 keywords = ["development", "automation", "productivity", "setup", "dependencies", "ml", "cloud", "web3"]
 dependencies = [
-    "requests>=2.28.0",
+    "click>=8.1.0",
+    "rich>=13.7.0",
     "psutil>=5.9.0",
-    "click>=8.0.0",
+    "requests>=2.31.0",
     "pyyaml>=6.0",
-    "colorama>=0.4.0",
-    "rich>=13.0.0",
-    "inquirer>=3.1.0",
+    "structlog>=24.1.0",
+    "inquirer>=3.4.1",
+    "blessed>=1.22.0",
+    "colorama>=0.4.6",
 ]
 
 [project.optional-dependencies]
@@ -79,7 +81,7 @@ Repository = "https://github.com/he2plus/he2plus-lib"
 "Twitter" = "https://twitter.com/he2plus"
 
 [project.scripts]
-he2plus = "he2plus.cli:main"
+he2plus = "he2plus.cli.main:cli"
 
 [tool.setuptools]
 include-package-data = true
